--- a/src/site/resources/_index.html
+++ b/src/site/resources/_index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta http-equiv="refresh" content="0; url=http://cazcade.github.io/dollar/README.html"/>
+    <meta http-equiv="refresh" content="0; url=http://neilellis.github.io/dollar/README.html"/>
     <meta charset="UTF-8">
     <title></title>
 </head>
