Initial work on scripting language and documentation.

--- a/dollar-docs/src/main/webapp/script.html
+++ b/dollar-docs/src/main/webapp/script.html
@@ -40,7 +40,7 @@
     <!-- Initializer -->
     <script>
         Flatdoc.run({
-            fetcher: Flatdoc.github('neilellis/dollar', "dollar-docs/src/main/resources/pages/tutorial.md")
+            fetcher: Flatdoc.file('scripting.md')
         });
     </script>
 </head>
