Initial work on scripting language and documentation.

--- a/dollar-docs/src/main/webapp/script.html
+++ b/dollar-docs/src/main/webapp/script.html
@@ -34,7 +34,7 @@
     <script src='http://rstacruz.github.io/flatdoc/v/0.8.6/theme-white/script.js'></script>
 
     <!-- Meta -->
-    <meta content="Dollar API" property="og:title">
+    <meta content="DollarScript" property="og:title">
     <meta content="Dollar" name="description">
 
     <!-- Initializer -->
@@ -48,7 +48,7 @@
 
 <div class='header'>
     <div class='left'>
-        <h1>Dollar API</h1>
+        <h1>DollarScript</h1>
         <ul>
             <li><a href='https://github.com/neilellis/dollar'>View on GitHub</a></li>
             <li><a href='https://github.com/neilellis/dollar/issues'>Issues</a></li>
