--- a/dollar-docs/src/main/webapp/script.html
+++ b/dollar-docs/src/main/webapp/script.html
@@ -56,6 +56,9 @@
         </ul>
     </div>
     <div class='right'>
+        <a href="https://circleci.com/gh/neilellis/dollar">
+            <img src="https://circleci.com/gh/neilellis/dollar.png?style=badge"/>
+        </a>
         <!-- GitHub buttons: see http://ghbtns.com -->
         <iframe src="http://ghbtns.com/github-btn.html?user=neilellis&amp;repo=dollar&amp;type=watch&amp;count=true"
                 allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
