--- a/dollar-docs/src/main/webapp/index.html
+++ b/dollar-docs/src/main/webapp/index.html
@@ -56,9 +56,13 @@
         </ul>
     </div>
     <div class='right'>
-        <!-- GitHub buttons: see http://ghbtns.com -->
-        <iframe src="http://ghbtns.com/github-btn.html?user=neilellis&amp;repo=dollar&amp;type=watch&amp;count=true"
-                allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+        <a href="https://circleci.com/gh/neilellis/dollar">
+            <img src="https://circleci.com/gh/neilellis/dollar.png?style=badge"/>
+        </a>
+
+        <!--&lt;!&ndash; GitHub buttons: see http://ghbtns.com &ndash;&gt;-->
+        <!--<iframe src="http://ghbtns.com/github-btn.html?user=neilellis&amp;repo=dollar&amp;type=watch&amp;count=true"-->
+        <!--allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>-->
     </div>
 </div>
 
