Massive work around the _fix() methods, closer to get a coherent system of delayed execution in place.

--- a/dollar-docs/src/main/webapp/index.html
+++ b/dollar-docs/src/main/webapp/index.html
@@ -34,13 +34,13 @@
     <script src='http://rstacruz.github.io/flatdoc/v/0.8.6/theme-white/script.js'></script>
 
     <!-- Meta -->
-    <meta content="Dollar API" property="og:title">
+    <meta content="DollarScript" property="og:title">
     <meta content="Dollar" name="description">
 
     <!-- Initializer -->
     <script>
         Flatdoc.run({
-            fetcher: Flatdoc.github('neilellis/dollar')
+                        fetcher: Flatdoc.file('scripting.md')
         });
     </script>
 </head>
@@ -48,19 +48,18 @@
 
 <div class='header'>
     <div class='left'>
-        <h1>Dollar API</h1>
+        <h1>DollarScript</h1>
         <ul>
             <li><a href='https://github.com/neilellis/dollar'>View on GitHub</a></li>
             <li><a href='https://github.com/neilellis/dollar/issues'>Issues</a></li>
-            <li><a href='script.html'>Dollar Script</a></li>
+            <li><a href='api.html'>Dollar API</a></li>
         </ul>
     </div>
     <div class='right'>
         <a href="https://circleci.com/gh/neilellis/dollar">
             <img src="https://circleci.com/gh/neilellis/dollar.png?style=badge"/>
         </a>
-
-        <!--&lt;!&ndash; GitHub buttons: see http://ghbtns.com &ndash;&gt;-->
+        <!-- GitHub buttons: see http://ghbtns.com -->
         <!--<iframe src="http://ghbtns.com/github-btn.html?user=neilellis&amp;repo=dollar&amp;type=watch&amp;count=true"-->
         <!--allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>-->
     </div>
