Adding hexo for website

--- a/dollar-docs/src/main/webapp/ref/index.html
+++ b/dollar-docs/src/main/webapp/ref/index.html
@@ -40,7 +40,7 @@
     <!-- Initializer -->
     <script>
         Flatdoc.run({
-                        fetcher: Flatdoc.file('scripting.md')
+                        fetcher: Flatdoc.file('../scripting.md')
         });
     </script>
 </head>
