--- a/dollar-docs/src/main/webapp/api.html
+++ b/dollar-docs/src/main/webapp/api.html
@@ -52,7 +52,7 @@
         <ul>
             <li><a href='https://github.com/neilellis/dollar'>View on GitHub</a></li>
             <li><a href='https://github.com/neilellis/dollar/issues'>Issues</a></li>
-            <li><a href='index.html'>Dollar Script</a></li>
+            <li><a href='script.html'>Dollar Script</a></li>
         </ul>
     </div>
     <div class='right'>
