--- a/dollar-docs/src/main/webapp/index.html
+++ b/dollar-docs/src/main/webapp/index.html
@@ -19,6 +19,9 @@ layout: default
   -->
 
 <div class="home">
+  <h1>About</h1>
+  <p>DollarScript is a scripting language for the Java VM, best suited to small to medium server-side projects. Please checkout the <a href="script.html">Manual</a> for a full introduction to DollarScript.</p>
+  <p>The Dollar API is the base of the language and is designed for dynamic programming on the JVM, details can be found <a href="api.html">here</a>.</p>
 
   <h1 class="page-heading">News</h1>
 
