--- a/dollar-docs/src/main/webapp/index.html
+++ b/dollar-docs/src/main/webapp/index.html
@@ -22,6 +22,8 @@ layout: default
   <h1>About</h1>
   <p>DollarScript is a scripting language for the Java VM, best suited to small to medium server-side projects. Please checkout the <a href="script.html">Manual</a> for a full introduction to DollarScript.</p>
   <p>The Dollar API is the base of the language and is designed for dynamic programming on the JVM, details can be found <a href="api.html">here</a>.</p>
+  <p>The language and API are at an incredibly early stage so don't expect too much, I have released early mainly to get feedback and swap ideas before the language gets too formalized.</p>
+  <p>Oh, and I'm Neil Ellis, the author of both, I lurk on <a href="http://twitter.com/neilellis">Twitter</a> so just @mention me and I'll get back to you.</p>
 
   <h1 class="page-heading">News</h1>
 
