--- a/dollar-docs/src/main/webapp/api.html
+++ b/dollar-docs/src/main/webapp/api.html
@@ -50,6 +50,7 @@
     <div class='left'>
         <h1>Dollar API</h1>
         <ul>
+            <li><a href='https://neilellis.github.io/dollar'>Home</a></li>
             <li><a href='https://github.com/neilellis/dollar'>View on GitHub</a></li>
             <li><a href='https://github.com/neilellis/dollar/issues'>Issues</a></li>
             <li><a href='script.html'>Dollar Script</a></li>
