--- a/dollar-docs/src/main/webapp/script.html
+++ b/dollar-docs/src/main/webapp/script.html
@@ -50,6 +50,7 @@
     <div class='left'>
         <h1>DollarScript</h1>
         <ul>
+            <li><a href='https://neilellis.github.io/dollar'>Home</a></li>
             <li><a href='https://github.com/neilellis/dollar'>View on GitHub</a></li>
             <li><a href='https://github.com/neilellis/dollar/issues'>Issues</a></li>
             <li><a href='api.html'>Dollar API</a></li>
