General tooling and planning integration.

--- a/dollar-docs/src/main/webapp/index.html
+++ b/dollar-docs/src/main/webapp/index.html
@@ -24,7 +24,8 @@ layout: default
 
   <div style="width:100%;min-width:440px;display: inline-block;margin-bottom:2em;">
     <span style="max-width:30%;min-width:100px;display: inline-block;float: right;margin-left:2em">
-        <!--<img src="https://s3-us-west-2.amazonaws.com/tilt-donations/donate_now.png" data-ct-checkout="dollar.supporting-open-source">-->
+        <img src="https://s3-us-west-2.amazonaws.com/tilt-donations/donate_now.png"
+             data-ct-checkout="dollar.supporting-open-source">
 
     </span>
 
