--- a/dollar-examples/src/main/webapp/index.html
+++ b/dollar-examples/src/main/webapp/index.html
@@ -53,7 +53,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.js"></script>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script>
 
         var userName = 'user' + Math.floor((
@@ -62,12 +68,23 @@
 
         var socket = io.connect('http://localhost:8092');
 
+        function currentTime(time) {
+            return "<span class='time'>" + moment(time).calendar() + "</span> ";
+        }
+
         socket.on('connect', function () {
             output('<span class="connect-msg">Client has connected to the server!</span>');
+            $.getJSON("http://localhost:8091/messages", function (data) {
+                var arrayLength = data.length;
+
+                for (var i = 0; i < arrayLength; i++) {
+                    output(currentTime(data[i].timestamp.text) + '<span class="username-msg">' + data[i].userName + ':</span> ' + data[i].message);
+                }
+            });
         });
 
         socket.on('chatevent', function (data) {
-            output('<span class="username-msg">' + data.userName + ':</span> ' + data.message);
+            output(currentTime(new Date()) + '<span class="username-msg">' + " " + data.userName + ':</span> ' + data.message);
         });
 
         socket.on('disconnect', function () {
@@ -98,9 +115,9 @@
         }
 
         function output(message) {
-            var currentTime = "<span class='time'>" + moment().format('HH:mm:ss.SSS') + "</span>";
-            var element = $("<div>" + currentTime + " " + message + "</div>");
-            $('#console').prepend(element);
+
+            var element = $("<div>" + message + "</div>");
+            $('#console').append(element);
         }
 
     </script>
@@ -108,7 +125,7 @@
 
 <body>
 
-<h1>Netty-socketio Demo Chat</h1>
+<h1>DollarScript Chat Demo</h1>
 
 <br/>
 
