--- a/dollar-docs/src/main/webapp/index.html
+++ b/dollar-docs/src/main/webapp/index.html
@@ -58,8 +58,8 @@ layout: default
 
     <p>Oh, and I'm Neil Ellis, the author of both, I lurk on <a href="http://twitter.com/neilellis">Twitter</a> so just
         @mention me and I'll get back to you.</p>
-    <a href='https://bintray.com/neilellis/dollar/dollar-runtime-osx/_latestVersion'><img
-            src='https://api.bintray.com/packages/neilellis/dollar/dollar-runtime-osx/images/download.svg'></a>
+    <<a href='https://bintray.com/neilellis/dollar/dollarscript/_latestVersion'><img
+        src='https://api.bintray.com/packages/neilellis/dollar/dollarscript/images/download.svg'></a>
 
 
     <br/>
