--- a/dollar-docs/src/main/webapp/index.html
+++ b/dollar-docs/src/main/webapp/index.html
@@ -65,8 +65,8 @@ layout: default
 
     <br/>
     <br/>
-    [![Install on
-    DigitalOcean](http://installer.71m.us/button.svg)](http://installer.71m.us/install?url=https://github.com/neilellis/dollar)
+    <a href="http://installer.71m.us/install?url=https://github.com/neilellis/dollar"><img
+            src="http://installer.71m.us/button.svg"/></a>
     <br/>
     <hr/>
     <br/>
