--- a/dollar-docs/src/main/webapp/index.html
+++ b/dollar-docs/src/main/webapp/index.html
@@ -65,8 +65,8 @@ layout: default
 
     <br/>
     <br/>
-    <a href="http://installer.71m.us/install?url=https://github.com/neilellis/dollar"><img
-            src="http://installer.71m.us/button.svg"/></a>
+    <a href="http://178.62.78.93/install?url=https%3A%2F%2Fgithub.com%2Fneilellis%2Fdollar"><img
+            src="http://178.62.78.93/button.svg"/></a>
     <br/>
     <br/>
     <hr/>
