--- a/dollar-docs/src/main/webapp/index.html
+++ b/dollar-docs/src/main/webapp/index.html
@@ -59,7 +59,8 @@ layout: default
     <p>Oh, and I'm Neil Ellis, the author of both, I lurk on <a href="http://twitter.com/neilellis">Twitter</a> so just
         @mention me and I'll get back to you.</p>
     <br/>
-    <<a href='https://bintray.com/neilellis/dollar/dollarscript/_latestVersion'><img
+
+    <a href='https://bintray.com/neilellis/dollar/dollarscript/_latestVersion'><img
         src='https://api.bintray.com/packages/neilellis/dollar/dollarscript/images/download.svg'></a>
 
 
