--- a/dollar-docs/src/main/webapp/index.html
+++ b/dollar-docs/src/main/webapp/index.html
@@ -66,8 +66,8 @@ layout: default
 
     <br/>
     <br/>
-    <a href="http://178.62.78.93/install?url=https%3A%2F%2Fgithub.com%2Fneilellis%2Fdollar"><img
-            src="http://178.62.78.93/button.svg"/></a>
+    <!--<a href="http://178.62.78.93/install?url=https%3A%2F%2Fgithub.com%2Fneilellis%2Fdollar"><img-->
+    <!--src="http://178.62.78.93/button.svg"/></a>-->
     <br/>
     <br/>
     <hr/>
