--- a/dollar-docs/src/main/webapp/script.html
+++ b/dollar-docs/src/main/webapp/script.html
@@ -1,19 +1,19 @@
 <!doctype html>
 
 <!--
-  ~ Copyright (c) 2014 Neil Ellis
+  ~    Copyright (c) 2014-2017 Neil Ellis
   ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
+  ~    Licensed under the Apache License, Version 2.0 (the "License");
+  ~    you may not use this file except in compliance with the License.
+  ~    You may obtain a copy of the License at
   ~
-  ~       http://www.apache.org/licenses/LICENSE-2.0
+  ~          http://www.apache.org/licenses/LICENSE-2.0
   ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
+  ~    Unless required by applicable law or agreed to in writing, software
+  ~    distributed under the License is distributed on an "AS IS" BASIS,
+  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~    See the License for the specific language governing permissions and
+  ~    limitations under the License.
   -->
 
 <html>
@@ -34,13 +34,13 @@
     <script src='http://rstacruz.github.io/flatdoc/v/0.8.6/theme-white/script.js'></script>
 
     <!-- Meta -->
-    <meta content="DollarScript" property="og:title">
+    <meta content="Dollar" property="og:title">
     <meta content="Dollar" name="description">
 
     <!-- Initializer -->
     <script>
         Flatdoc.run({
-                        fetcher: Flatdoc.file('scripting.md')
+                        fetcher: Flatdoc.file('manual.md')
         });
     </script>
 </head>
@@ -50,15 +50,14 @@
     <div class='left'>
         <h1>DollarScript</h1>
         <ul>
-            <li><a href='https://neilellis.github.io/dollar'>Home</a></li>
-            <li><a href='https://github.com/neilellis/dollar'>View on GitHub</a></li>
-            <li><a href='https://github.com/neilellis/dollar/issues'>Issues</a></li>
-            <li><a href='api.html'>Dollar API</a></li>
+            <li><a href='https://sillelien.github.io/dollar'>Home</a></li>
+            <li><a href='https://github.com/sillelien/dollar'>View on GitHub</a></li>
+            <li><a href='https://github.com/sillelien/dollar/issues'>Issues</a></li>
         </ul>
     </div>
     <div class='right'>
-        <a href="https://circleci.com/gh/neilellis/dollar">
-            <img src="https://circleci.com/gh/neilellis/dollar.png?style=badge"/>
+        <a href="https://circleci.com/gh/sillelien/dollar">
+            <img src="https://circleci.com/gh/sillelien/dollar.png?style=badge"/>
         </a>
         <!-- GitHub buttons: see http://ghbtns.com -->
         <!--<iframe src="http://ghbtns.com/github-btn.html?user=neilellis&amp;repo=dollar&amp;type=watch&amp;count=true"-->
