--- a/dollar-docs/src/main/webapp/script.html
+++ b/dollar-docs/src/main/webapp/script.html
@@ -25,13 +25,13 @@
     <title>Dollar</title>
 
     <!-- Flatdoc -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src='http://rstacruz.github.io/flatdoc/v/0.8.6/legacy.js'></script>
-    <script src='http://rstacruz.github.io/flatdoc/v/0.8.6/flatdoc.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src='https://rstacruz.github.io/flatdoc/v/0.8.6/legacy.js'></script>
+    <script src='https://rstacruz.github.io/flatdoc/v/0.8.6/flatdoc.js'></script>
 
     <!-- Flatdoc theme -->
-    <link href='http://rstacruz.github.io/flatdoc/v/0.8.6/theme-white/style.css' rel='stylesheet'>
-    <script src='http://rstacruz.github.io/flatdoc/v/0.8.6/theme-white/script.js'></script>
+    <link href='https://rstacruz.github.io/flatdoc/v/0.8.6/theme-white/style.css' rel='stylesheet'>
+    <script src='https://rstacruz.github.io/flatdoc/v/0.8.6/theme-white/script.js'></script>
 
     <!-- Meta -->
     <meta content="Dollar" property="og:title">
